--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -8,20 +8,20 @@
   width: 100%;
   aspect-ratio: 1/1;
   border-radius: 2rem;
-  background: linear-gradient(45deg, transparent, var(--color-primary), transparent);
+  background: linear-gradient(40deg, transparent, var(--color-primary), transparent);
   display: grid;
   place-items: center;
 }
 
 .about__me-image {
+  width: 100%;
   border-radius: 2rem;
   overflow: hidden;
-  transform: rotate(0deg);
   transition: var(--transition);
 }
 
 .about__me-image:hover {
-  transform: scaleY(0.9);
+  transform: rotate(0.5deg);
 }
 
 .about__cards {
