--- a/src/index.css
+++ b/src/index.css
@@ -18,10 +18,10 @@
   --color-white: #fff;
   --color-light: rgba(255, 255, 255, 0.6); */
 
-  --color-bg: #2C3639;
-  --color-bg-variant: #826F66;
-  --color-primary: #C79B7B;
-  --color-primary-variant: #826F66;
+  --color-bg: #181D31;
+  --color-bg-variant: #2B3A55;
+  --color-primary: #678983;
+  --color-primary-variant: rgba(46, 68, 98, 0.7);
   --color-white: #fff;
   --color-light: rgba(255, 255, 255, 0.6);
 
