--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,6 @@
 header {
   height: 100vh;
-  padding-top: 4rem;
+  padding-top: 2rem;
   overflow: hidden;
 }
 
@@ -13,7 +13,7 @@ header {
 /* ============== CTA ================ */
 
 .cta {
-  margin-top: 2.5rem;
+  margin-top: 2rem;
   display: flex;
   gap: 1.2rem;
   justify-content: center;
@@ -39,15 +39,15 @@ header {
 
 /* ============== ME ================ */
 .me > img {
-  background: linear-gradient(var(--color-primary), transparent);
+  /* background: linear-gradient(var(--color-primary), transparent); */
   width: 22rem;
   height: 30rem;
   position: absolute;
   left: calc(50% - 11rem);
-  margin-top: 4rem;
+  margin-top: 1rem;
   border-radius: 12rem 12rem 0 0;
   overflow: hidden;
-  padding: 3rem 1.5rem 1rem 1.5rem;
+  padding: 2rem 1.5rem 1rem 1.5rem;
 }
 
 /* ============== Scrolll down ================ */
