--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -7,22 +7,25 @@
 .about__me {
   width: 100%;
   aspect-ratio: 1/1;
-  border-radius: 2rem;
-  background: linear-gradient(40deg, transparent, var(--color-primary), transparent);
+  border-radius: 1rem;
+  /* background: linear-gradient(40deg, transparent, var(--color-primary), transparent); */
   display: grid;
   place-items: center;
+  margin-left: 1rem ;
 }
 
+
 .about__me-image {
-  width: 100%;
-  border-radius: 2rem;
+  width: 80%;
+  border-radius: 1rem;
   overflow: hidden;
   transition: var(--transition);
 }
 
 .about__me-image:hover {
-  transform: rotate(0.5deg);
+  transform: rotate(2deg);
 }
+
 
 .about__cards {
   display: grid;
@@ -89,8 +92,8 @@
 
 @media screen and (max-width: 600px) {
   .about__me {
-    width: 67%;
-    margin: 2rem auto 4rem;
+    width: 60%;
+    margin: 1rem auto 1rem;
   }
   .about__cards {
     grid-template-columns: 1fr 1fr;
@@ -102,7 +105,7 @@
     margin: 1.5rem 0;
   }
   .about__me-image {
-    margin-bottom: 5rem;
+    margin-bottom: 4rem;
     max-height: 320px;
   }
 }
