--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,8 @@
-header {
-  height: 100vh;
-  padding-top: 2rem;
+.header {
+  max-height: 100vh;
+  padding-top: 1rem;
   overflow: hidden;
+  background-image: url(../../assets/bg-texture.png);
 }
 
 .header__container {
@@ -27,7 +28,7 @@ header {
   gap: 0.8rem;
   position: absolute;
   left: 0;
-  bottom: 3rem;
+  bottom: 8rem;
 }
 
 .header__socials::after {
@@ -40,20 +41,20 @@ header {
 /* ============== ME ================ */
 .me > img {
   /* background: linear-gradient(var(--color-primary), transparent); */
-  width: 22rem;
+  width: 30rem;
   height: 30rem;
-  position: absolute;
-  left: calc(50% - 11rem);
+  position: relative;
+  left: calc(50% - 15rem);
   margin-top: 1rem;
-  border-radius: 12rem 12rem 0 0;
+  /* border-radius: 12rem 12rem 0 0; */
   overflow: hidden;
-  padding: 2rem 1.5rem 1rem 1.5rem;
+  /* padding: 1rem 1rem; */
 }
 
 /* ============== Scrolll down ================ */
 .scroll__down {
   position: absolute;
-  bottom: 5rem;
+  bottom: 11rem;
   right: -2.3rem;
   transform: rotate(90deg);
   font-weight: 300;
@@ -63,19 +64,26 @@ header {
 /* ==================== Media Queries (Medium Devices) ========================= */
 
 @media screen and (max-width: 1024px) {
-  header {
-    height: 86vh;
+  .header {
+    height: 67vh;
   }
 }
 
 /* ==================== Media Queries (Small Devices) ========================= */
 
-@media screen and (max-width: 768px) {
-  header {
-    height: 110vh;
+@media screen and (max-width: 600px) {
+  .header {
+    height: 92vh;
   }
+
   .header__socials,
   .scroll__down {
     display: none;
+  }
+
+  .me > img {
+    width: 20rem;
+    height: 20rem;
+    margin-left: 6rem;
   }
 }
