--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -11,41 +11,43 @@
   /* background: linear-gradient(40deg, transparent, var(--color-primary), transparent); */
   display: grid;
   place-items: center;
-  margin-left: 1rem ;
+  margin-left: 2rem ;
 }
 
 
 .about__me-image {
-  width: 80%;
-  border-radius: 1rem;
+  width: 110%;
   overflow: hidden;
   transition: var(--transition);
 }
 
 .about__me-image:hover {
-  transform: rotate(2deg);
+  transform: rotate(-2deg);
 }
 
 
 .about__cards {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 1.5rem;
+  
 }
 
 .about__card {
   background: var(--color-bg-variant);
-  border: 1px solid transparent;
-  border-radius: 1rem;
+  border: 2px solid transparent;
+  border-radius: 0.5rem;
   padding: 2rem;
   text-align: center;
   transition: var(--transition);
+  box-shadow: 10px 10px black;
 }
 
 .about__card:hover {
-  border-color: 1px solid var(--color-primary-variant);
+  border-color: 2px solid var(--color-primary-variant);
   background: transparent;
   cursor: default;
+  transform: translate(-1px, -1px);
 }
 
 .about__icon {
@@ -55,6 +57,7 @@
 }
 
 .about__card h5 {
+  color: var(--color-primary-variant);
   font-size: 0.95rem;
 }
 
@@ -92,8 +95,8 @@
 
 @media screen and (max-width: 600px) {
   .about__me {
-    width: 60%;
-    margin: 1rem auto 1rem;
+    width: 80%;
+    margin: 0rem auto 2rem;
   }
   .about__cards {
     grid-template-columns: 1fr 1fr;
@@ -106,6 +109,6 @@
   }
   .about__me-image {
     margin-bottom: 4rem;
-    max-height: 320px;
+    max-height: 350px;
   }
 }
