--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -5,16 +5,18 @@
 }
 
 .experience__container > div {
-  background: var(--color-bg-variant);
+  background: var(--color-bg);
   padding: 2.5rem 4rem;
-  border-radius: 2rem;
-  border: 1px solid transparent;
+  border-radius: 0.2rem;
+  border: 3px solid var(--color-black);
   transition: var(--transition);
 }
 .experience__container > div:hover {
   background: transparent;
-  border-color: var(--color-primary-variant);
+  border-color: var(--color-black);
   cursor: default;
+  box-shadow: 10px 10px black;
+  transform: translate(-5px, -5px);
 }
 
 .experience__container > div > h3 {
@@ -42,6 +44,15 @@
 
 /* ==================== Media Queries (Medium Devices) ========================= */
 
+@media screen and (max-width: 1920px) {
+  .experience__content {
+    align-items: center;
+    gap: 2rem 2rem;
+  }
+}
+
+/* ==================== Media Queries (Medium Devices) ========================= */
+
 @media screen and (max-width: 1024px) {
   .experience__container {
     grid-template-columns: 1fr;
@@ -61,15 +72,15 @@
 
 @media screen and (max-width: 600px) {
   .experience__container {
-    gap: 1rem;
+    gap: 1.3rem;
   }
   .experience__container > div {
     width: 100%;
     padding: 1rem 0rem;
   }
   .experience__details-icon {
-  margin-top: 6px;
-  margin-left: 16px;
-  color: var(--color-primary);
-}
+    margin-top: 5px;
+    margin-left: 5px;
+    color: var(--color-primary);
+  }
 }
