--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,13 +1,13 @@
 footer {
-  background: var(--color-primary-variant);
+  background: var(--color-bg-variant);
   padding: 3rem 0;
   text-align: center;
-  font-size: 0.9rem;
+  font-size: 1rem;
   margin-top: 7rem;
 }
 
 footer a {
-  color: var(--color-white);
+  color: var(--color-light);
 }
 
 .footer__logo {
@@ -33,9 +33,8 @@ footer a {
 }
 
 .footer__socials a {
-  
   color: var(--color-white);
-  background: var(--color-bg);
+  background: var(--color-black);
   padding: 0.8rem;
   border-radius: 0.7rem;
   display: flex;
@@ -43,15 +42,15 @@ footer a {
 }
 
 .footer__socials a:hover {
-  background: var(--color-light);
+  background: var(--color-bg-variant);
   color: var(--color-bg);
   border-color: var(--color-bg);
 }
 
 .footer__copyright {
-  font-size: 20px;
-  font-weight: 700;
-  margin-bottom: 1rem;
+  font-size: 15px;
+  font-weight: 600;
+  margin-bottom: 0rem;
   color: var(--color-bg);
 }
 
