--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -37,7 +37,7 @@
 }
 
 .header__socials::after {
-  content: '';
+  content: "";
   width: 1px;
   height: 2rem;
   background: var(--color-primary);
